revised index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
         cartCount-updater  hidden-count">0</span>
       </div>
       <div class="logo-wrapper ">
+          <!-- What does itemscope and itemtype mean below?  -->
           <h1 class="h4 header-logo" itemscope itemtype="http://schema.org/Organization">
+            <!-- What does itemprop mean below?  -->
             <a href="/_" itemprop="url">...</a> ==$0
+              <!-- What does the i mean below?  -->
+              <i class="icon icon-ra_primary-logo">
+                ::before
+              </i>
+            </a>
           </h1>
         </div>
       <a href class="menuToggle header-hamburger"></a> == $0
@@ -39,8 +46,7 @@
           Process</a>
         </li>
         <li class="child  kids-0">...</li>
-          <a href="/blogs/from-the-studio" class="nav-link" id="Blog">
-          Blog</a>
+          <a href="/blogs/from-the-studio" class="nav-link" id="Blog">Blog</a>
         </li>
         <li class="child  kids-0">...</li>
           <a href="/pages/book" class="nav-link" id="Book">Book</a>
@@ -54,7 +60,12 @@
         </li>
         <li class="cart-text-link">
           <a href="/cart" class="CartToggle">
-        </li>
+            "
+                    Bag
+                    "
+              <span class=" hidden-count " id="nav-cartCountDesktop">(0)</span>
+            </a>
+          </li>
       </ul>
     </div>
   </div>
